// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test addExample(...) render HTML & CSS snippets correctly when we call "showCode()" 1`] = `
<div
  class="codepane"
  id="codepane"
>
  <div
    class="codepane__example actived"
    data-key="dummy"
  >
    
    
    <div
      class="codepane__code actived"
    >
      
        
      <div
        class="codepane__html"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
            
        <pre>
          <code>
            &lt;div&gt;&lt;div/&gt;
          </code>
        </pre>
        
        
      </div>
      
        
      <div
        class="gutter gutter-horizontal"
        style="flex-basis: 5px;"
      />
      <div
        class="codepane__css"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
            
        <pre>
          <code>
            <span
              class="selector"
            >
              div
            </span>
             {
            <br />
                
            <span
              class="property-name"
            >
              display
            </span>
            : 
            <span
              class="property-value"
            >
              flex
            </span>
            ;
            <br />
            }
          </code>
        </pre>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="codepane__result"
    >
      
        
      <div />
      
    
    </div>
    

  </div>
</div>
`;

exports[`Test addExample(...) render result correctly when we call "showResult()" 1`] = `
<div
  class="codepane"
  id="codepane"
>
  <div
    class="codepane__example actived"
    data-key="dummy"
  >
    
    
    <div
      class="codepane__code"
    >
      
        
      <div
        class="codepane__html"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
            
        <pre>
          <code>
            &lt;div&gt;&lt;div/&gt;
          </code>
        </pre>
        
        
      </div>
      
        
      <div
        class="gutter gutter-horizontal"
        style="flex-basis: 5px;"
      />
      <div
        class="codepane__css"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
            
        <pre>
          <code>
            <span
              class="selector"
            >
              div
            </span>
             {
            <br />
                
            <span
              class="property-name"
            >
              display
            </span>
            : 
            <span
              class="property-value"
            >
              flex
            </span>
            ;
            <br />
            }
          </code>
        </pre>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="codepane__result actived"
    >
      
        
      <div />
      
    
    </div>
    

  </div>
</div>
`;
